apps/podinfo/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: podinfo
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`podinfo.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: podinfo
          port: 9898
  tls:
    secretName: podinfo-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-http
  namespace: podinfo
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`podinfo.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: podinfo
          port: 9898
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: podinfo
spec:
  redirectScheme:
    scheme: https
    permanent: true
